[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/characters/Egg/Egg.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://src/characters/PropertyNodes/Interactable/Interactable.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/characters/PropertyNodes/Dragable/Dragable.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 18.4391

[sub_resource type="CircleShape2D" id=2]
radius = 22.0227

[node name="Egg" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.72, 1 )
texture = ExtResource( 2 )
flip_v = true

[node name="ChickenInteractable" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 0 )
filter_type = "CHICKEN"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChickenInteractable"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Dragable" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dragable"]
shape = SubResource( 2 )

[connection signal="on_interaction" from="ChickenInteractable" to="." method="_on_ChickenInteractable_on_interaction"]
[connection signal="input_event" from="Dragable" to="Dragable" method="_on_Dragable_input_event"]
[connection signal="on_drag_finished" from="Dragable" to="." method="_on_Dragable_on_drag_finished"]
[connection signal="on_drag_started" from="Dragable" to="." method="_on_Dragable_on_drag_started"]
